# msse_cafe_fausse

./: .cursorrules  .gitignore  README.md  package.json
_documentation/: project-requirements.md
backend/: alembic.ini  build_and_import_app.sh  pyproject.toml
backend-python/: pyproject.toml
backend-python/app/: models.py
backend-python/app/crud/: customer.py
backend-python/app/db/: session.py
backend-python/migrations/: env.py
backend-python/migrations/versions/: 2025_04_26_2230-daf7db4beeec_initial_migration.py
backend/app/: main.py  models.py  schemas.py
backend/app/api/: __init__.py  newsletter.py  reservations.py
backend/app/core/: config.py
backend/app/crud/: customer.py  newsletter.py  reservation.py  table.py
backend/app/db/: base.py  config.py  init_db.py  session.py
backend/app/static/: index.html
backend/app/static/_astro/: Gallery.wxFJgNvv.js  ReservationForm.Cytbefz2.js  about.DAt3mQRm.css
backend/app/static/about/: index.html
backend/app/static/gallery/: index.html
backend/app/static/menu/: index.html
backend/app/static/reservations/: index.html
backend/migrations/: env.py
backend/migrations/versions/: 2025_04_26_2230-daf7db4beeec_initial_migration.py
backend/scripts/: seed_reservations.py
frontend/: package-lock.json  tailwind.config.cjs
frontend-astro/: package-lock.json  package.json
frontend-astro/src/components/: Footer.astro  Gallery.tsx  Header.astro  Hero.astro  NewsletterSignup.astro  ReservationForm.tsx
frontend-astro/src/layouts/: Layout.astro
frontend-astro/src/pages/: about.astro  gallery.astro  (+3 more)
(+13 files in other folders)
