[tool.poetry]
name = "cafe-fausse-server"
version = "0.1.0"
description = ""
authors = ["Francis Wang <findcongwang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.40"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
