[tool.poetry]
name = "cafe-fausse-server"
version = "0.1.0"
description = ""
authors = ["Francis Wang <findcongwang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.40"
pydantic = "^2.11.3"
black = "^25.1.0"
alembic = "^1.15.2"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
pydantic-settings = "^2.9.1"
greenlet = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
