[tool.poetry]
name = "msse_cafe_fausse"
version = "0.1.0"
description = ""
authors = ["Francis Wang <findcongwang@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.40"
pydantic = "^2.11.3"
black = "^25.1.0"
alembic = "^1.15.2"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
pydantic-settings = "^2.9.1"
greenlet = "^3.2.1"
flask = "^3.1.0"
flask-cors = "^5.0.1"
uvicorn = "^0.34.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
